--- a/main.tex
+++ b/main.tex
@@ -1002,13 +1002,13 @@ $$\Gamma \approx e^\pi + 2$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n = \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}$$
-confirming the role of the dimension 496 and Atiyah's symmetry between $p$ and $a$. 
+confirming the role of the dimension 496 and Atiyah's symmetry between $\pi$ and $a$. 
 
 \section {Discussion}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
 There is presently an intense debate in physics community. Only a minority believes in a Single
-Final Theory, while a large majority have abandoned hope and believes seriously in the extreme
+Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a single steady-state cosmos.
 
@@ -1016,10 +1016,10 @@ This article confirms direct connexions [3] between physical and biological para
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
 `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
-called `theory` which is contradicted by so many missing links [26]. The fundamental hypothesis of
+called `theory` with too much missing links [26]. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
-character, experienced in musical sensation. So, intelligent life must be universal. The famous Fermi
-question `where are they ?` is not a paradox, since any abnormal observation is a-priori rejected by a
+character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
+question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
 dogmatic community.
 
 Another type of separation exists, but with not any debate: only a small minority thinks Physics
@@ -1027,32 +1027,30 @@ and Mathematics are unified, while a large majority separates the two domains (s
 Biology). The present article shows that the former are right: physical constants are mathematical
 constants, so the present-day mathematics are still in infancy, not realizing that the discovery of
 sporadic groups is a crucial discovery for physics. In particular, it is clearly shown that
-Grandcosmos is like a computer which uses optimal physico-mathematical dimensionless constants as
+Grandcosmos is like a computer which uses optimal physics-mathematics dimensionless constants as
 calculation basis and that they are present in DNA characteristics [3]. The present article shows
-definitely the liaisons with $\pi$, e and $\gamma$, as well as very special rational approximations of 
-$\pi$, and e, and rehabilitates String theories, also abandoned by a
-majority [27].
+definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
+them, and rehabilitates string theories, also abandoned by amajority [27].
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices`,
 in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
-directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
+directly the Supercycle period of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
 astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity [3].
 This is tied to the application of the exclusion principle that Eddington dared to apply in
-cosmology. For this reason he was declared `crakpot` and his theory discarded by a majority.
+cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
 Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
 
-The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at
-least a part of these works is very pertinent.
+The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
 It seems that the pre-scientific role of chance is a common point between three misleading views
-in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's argumentation
+in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
 with a scientific theory. Secondly, in quantum physics, the so-called `uncertainty principles`, which are
 only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of such simple polynomial relations cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism. 
+The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism. 
 
 
 \section {Conclusions Simplicity at work}
@@ -1061,19 +1059,19 @@ The pertinence of such simple polynomial relations cannot be admitted by the sta
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
 confirmed by holographic relations. The standard cosmological principle was unduly limited to
-spatial homogeneity. The Relativity theory, unable to define an inertial frame, is a local one and do
-not apply in Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
+spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
+not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
 Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is a quasi-
 absolute clock, ruled by the tachyonic celerity.
 
 The simplest topological equations, the equality between dimensionless topological varieties,
-circumference, area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest
-chapter of physics. This modern, negative, opinion is in fact contrary to the ancient culture, for
+circumference, area, 3D volume... appear to apply in cosmology, which, for many, seems to be the hardiest
+chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for
 which the Cosmology is the first of all science, so must be the simplest. In the original sens of the
 word `revolution`, it is a return to the source of Science, the `all is whole number`, of Pythagoras.
 Even the degenerate form of topological or holographic relations, the simplest diophantine
 equations, the Holic Principle, shows direct pertinence. In particular it emphatizes the 30
-dimensions, which appear decisive in the Topological Axis, and identifies with the sum of 26 string
+dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
 dimensions and 4 of space-time.
 
 The standard Holographic Principle must be generalized to wavelengths others than the Planck
@@ -1081,51 +1079,55 @@ length, in particular the Topon, the visible Universe wavelength in 1D holograph
 another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$ , resolving the
 vacuum energy dilemma factor $10^{122}$.
 
-The high precision (until ppb) prove that the traditional scientific thinking is not at all baffled by
+The high precision (to ppb) prove that the traditional scientific thinking is not at all baffled by
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Fermi constant, Muon mass, background temperature and
 Kotov cosmic period must be saluted as decisive achievements.
 
 The simplest method of looking for simple monomial expressions involving mathematical
-constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
+constants leads to ppb correlations, confirming Cosmos Unicity. Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
-should be worried what the Universe would be if a were not 137.035999...` This is a definite
-refutation of the Multiverse Hypothesis.
+should be worried what the Universe would be if $a$ were not 137.035999...` This is a definite
+rejection of the Multiverse Hypothesis.
 
 The present article confirms also the Topological Axis, which was obtained by the simplest
 visualizing method to represent in a single figure the characteristic lengths in macro and micro-
-physics, taking the electron wavelength as unity. The pertinence of the Topological Axis confirms
-the importance of the Electron wavy propagation. This rehabilitates the String theory, including the
-tachyonic bosonic version, since the canonical dimension 26 appears to characterizes the observable
-universe radius R. This confirms that c is not a cosmic pertinent speed, as is clearly shown both by
+physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest representation}
+
+The pertinence of the Topological Axis confirms
+the importance of the electron wavy propagation. This rehabilitates the string theory, including the
+tachyonic bosonic version, since the canonical dimension 26 appears to characterize the observable
+universe radius $R$. This confirms that $c$ is not really a cosmic pertinent speed, as is clearly shown both by
 logic (it is far too slow) and quantum non-locality.
 
-Moreover, by excluding c in the simplest tool of elementary physics, prospective dimensional
-analysis, this gives immediately a very good approximation of both R/2, the cosmic temperatureand the cosmic overall periodicity, which connects with the holic dimension n = 30 in the
+Moreover, excluding $c$ from the simplest tool of elementary physics, prospective dimensional
+analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
 Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
+
 While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
-appears, showing the gauge bosons, so confirming the Standard Model of Particle Physics, but with
+appears, unifying the gauge bosons, so confirming the Standard Model of Particle Physics, but with
 massive gluon, which is independently seriously considered [31].
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
 Poincare, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
-1, impeded the fact that the Hubble-Lemaitre radius R is a trivial length.
+1, impeded the fact that the Hubble-Lemaitre radius $R$ is a trivial length.
 
-The simplest model, the gravitational Hydrogen molecule gives R, explaining the 2 factor and
-justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant 70.790
+The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
+justifying the elimination of $c$, as in the Haas-Bohr model. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s), which
 confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
-The simplest statistical theory of Eddington gave another justification to R. Also, particularly
+
+The simplest statistical theory of Eddington gave another justification to $R$. Also, particularly
 simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
-trivial fraction 3M/10 of the observable universe. This is probably the most dramatic prediction in
-all scientific history.
+trivial fraction 3M/10 of the observable universe. \textit{This is probably the most dramatic prediction in
+all scientific history}
 
 The simplest proof of the computation basis character of the electrical parameter $a$ is provided
 by the multiple appearance of the terms $e^{a}$ and $a^{a}$.
 
-Now, the deep significance of a number of dimensions is the number of independent variables,
-which is a fundamental invariant, whatever the theory [32]. So, it is logical to introduce the
+The great significance of a number of dimensions is the number of independent variables,
+which is a fundamental invariant, whatever the theory [32]. So, it is logical to advance a
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
 Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
 work, the essential role of octonion algebra in the final theory [24].
@@ -1134,31 +1136,26 @@ The ancestral problem of the stability of the solar system must be revisited, ta
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
 and Arp effects must be seriously considered, guided by the flickering Time-Length-Mass concept.
 
-This article answers several main problems, and makes some predictions: 
+This article answers several main problems: 
 \begin{itemize}
 \item 1/ Unification Gravitation-Quantum Physics, by
-rehabilitating the forgotten Eddington's statistical theory, 
+rehabilitating the forgotten Eddington's statistical theory. 
 \item 2/ The real signification of Quantum
-Physics, by assuming Physics is based on Arithmetics, 
+Physics, by assuming Physics is based on Arithmetics. 
 \item 3/ The overall unification by showing that
-cosmology is the basis of United Science, 
+cosmology is the basis of United Science. 
 \item 4/ The role of dimensionless parameters, by proving that
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
-the Holic Principle, 
+the Holic Principle. 
 \item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since
 3/10 is the trivial ratio between gravitational and critical energy. 
 \item 6/. The introduction of the Topon
-justifies the $10^{122}$ gap between vacuum energy and the visible universe one.
-The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
-be confirmed by recent studies [30].
-\item 7/.The very large infra-red telescopes in preparation will show in the very far field old galaxies
-instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will
-not save the already refuted standard evolutionary model.
+justifies the $10^{122}$ gap between vacuum energy and that of the visible Universe.
 \item 8/In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fudamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ matrix.
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ matrix.
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
