--- a/main.tex
+++ b/main.tex
@@ -1050,8 +1050,9 @@ with a scientific theory. Secondly, in quantum physics, the so-called `uncertain
 only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism. 
+The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism.
 
+Finally, there is the problem of infinity. While it is wellcome in mathematics, it is condamned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
 \section {Conclusions Simplicity at work}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
@@ -1146,16 +1147,18 @@ Physics, by assuming Physics is based on Arithmetics.
 cosmology is the basis of United Science. 
 \item 4/ The role of dimensionless parameters, by proving that
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
-the Holic Principle. 
-\item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since
+the Holic Principle.
+\item 5/ The necessity of the Cosmos vasteness, which results from the rationalisation of $e$ and $\pi$
+\item 6/ The so-called Dark energy proportion 0.7, which is a false problem, since
 3/10 is the trivial ratio between gravitational and critical energy. 
-\item 6/. The introduction of the Topon
+\item 7/. The introduction of the Topon
 justifies the $10^{122}$ gap between vacuum energy and that of the visible Universe.
-\item 8/In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
+
+In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ matrix.
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
