--- a/main.tex
+++ b/main.tex
@@ -931,16 +931,21 @@ This yields to a muon relative to electron mass ratio
 \end{equation} within its 20 ppb measurement range.
 Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
-(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
-gives $$\tau \approx 3477.441701$$ This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model. This value correlates with the
+gives $$\tau \approx 3477.441701$$
+The above Koide constant $p_K \approx 1842.604994$ is close to $p$, but, more interesting, it connects with the  Moonshine Monster dimension [23] $D = 196883$ of the Monster, to 48, 10, 13, 26 ppm:
+$$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
+Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \begin{equation}
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
 \end{equation}
-confirming the central role of the Moonshine Monster dimension [23] D = 196883.
+This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
+
+
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
