--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@ So, when Proust found whole numbers in chemical reactions, he was prefiguring th
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah, Sternheimer and Matthieu. The third Section involves the constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves the constants $\pi$, $e$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
@@ -103,19 +103,19 @@ The most famous fine tuning implies cosmic quantities, awkwardly called the `Dou
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
 clue in steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
-defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
+defining the Universe horizon radius $$R = 2a_{G} \lambdabar_{e}$$ , the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
-$a_{G}$ = $\hbar$$c$/$G$$m_{p}$$m_{H}$
+$$a_{G} = $\hbar c/Gm_{p}m_{H}$$
 So, \textit{the speed c is eliminated}, in accordance with
-Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ $\approx$ 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $$R \approx$ 13,812 Gly $$, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by 9\%,
 value.
 
-Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 \cdot 10^{-96} m$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $$\lambdabar_{M} = \hbar /Mc = 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
@@ -141,10 +141,10 @@ including, apart the two ones above, three relations which have been independent
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 
-In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation, incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $R/r \approx (4\pi \lambda_{CMB} /r)^{4}$, precise to $0.6\%$. 
-Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$.
- One notes that the appearance of the neutrino field is conform
+In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $$R/r \approx (4\pi \lambda_{CMB} /r)^{4}$$ precise to $0.6\%$. 
+Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $$R/ \lambdabar_{e} \approx
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$.
+One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
@@ -176,7 +176,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
 \label{fig:figure_label}
 \end{figure*}
 
-It was noted in [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
+It was noted in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
@@ -206,18 +206,18 @@ aware of this Cosmologic Exclusion Principle, but could not conclude since, at h
 Hubble measurement for $R$ was false by an order of magnitude.
 
 The reason for this discrepancy is that Lemaitre and Hubble considered galaxies of the Local
-Group, which do not participate the so-called space expansion. In fact, it is sufficiant to introduce a
-repulsive force proportional separation distance, for explaination of the canonical
-exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
-the cosmological constant identified with $1/R^{2}$. The distance for which this force exceeds attractive
+Group, which do not participate the so-called space expansion. In fact, it is sufficient to introduce a
+repulsive force proportional to separation distance, for explaination of the canonical
+exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent
+to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
+
+The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
 Axis, to the Atiyah Constant $\Gamma$, presented in the Section 4, see Fig 1.
 
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
-another evacuation mechanism must occur: it would be the role of massive black holes.
-
-
+another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
 \subsection{Cosmic Holography and Toponic Quantification}
 
@@ -226,8 +226,8 @@ Principle implies the invariance of the Universe mean mass density $\rho$ and th
 of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
 neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
-critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, devoted untill now, to 3D application only [6]:
+critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
+Principle, untill now devoted to 3D application only [6]:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
@@ -239,32 +239,30 @@ of space is known as the so-called `horizon problem`, and is at the origin of th
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of $R$.
 
-The cosmic wavelength
-$\lambdabar_{M}\sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$ : this explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is an intermediate holographic length only}.
+The cosmic wavelength $\lambdabar_{M}\sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$ : this explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
 Gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
-(3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
-zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a
+(3/10)Mc^{2}$, while the \textit{nonrelativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a
 trivial false problem. As recalled above, Relativity is a local theory that does not apply in
-cosmology at large: galaxies actually reach speed $c$, and, crossing the horizon, reach a Grandcosmos of
+cosmology at large: galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of
 radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, this time
 monochrome instead of the monoradial relation above:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
-with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$ , which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
+with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$ , which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-Plankian frequencies are wiped out [8].
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
-\approx 18.105 Gly$, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
+\approx 18.105 Gly $, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of $c$ between the classical electron radius and the Planck length. In this way, the sphere
 of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
-This value will be dramaticaly confirmed in the section 2.4.(Fig.6).
+This value will be dramaticaly confirmed in the section 2.4. (Fig.6).
 
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
 of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is $N_m \lambdabar_{M}$ ,
@@ -272,11 +270,11 @@ allowing the following holographic extension of the above mono-radial holographi
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
-This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
+This series of diametral circles generate, by scanning, the approximation of a sphere: one thus passes
 from disk to sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as $\pi$ (See Section 3).
+analysis, such as $\pi$ (See Section 4 and Discussion).
 
 The immensity of the Cosmos thus receives a computo-holographic explanation, which is much simpler
 than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
@@ -299,13 +297,13 @@ Holographic Relation, using the wavelengths of the electron, proton and hydrogen
 \end{equation}
 
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
+background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
 This eliminates $l_{P}$, producing a relation independent of $G$, implying $\Theta_{CMB} = 2.725820805 K$:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
-, which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section 4). Recall
+, which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $ proving the relevance of
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
+the Combinatorial Hierarchy [3] of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
 Coming back to the central mass relation:
 \begin{equation}
@@ -318,13 +316,11 @@ Another shortcoming of this theory is that it does not define any inertial frame
 Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 
-The mathematical continuity is excluded by the above Calculative Principle, so the time associated
+The mathematical continuity is excluded by the above Computation Principle, so the time associated
 to the above 'topon' 
-
 $$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
-
 is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency about $10^{104}Hz$ [5].
+oscillatory bounce has a frequency about $10^{104}Hz $ [5].
 
 \subsection{Tachyonic Flickering Space-Time-Matter}
 
@@ -534,7 +530,7 @@ This is a dramatic geometrical confirmation for the visible Universe – Grandco
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=8cm,height=6.5cm]{./figures/triaxis.png}
+\includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
 \caption{Geo dimensional Universe-Grandcosmos couple. In a 3D Super-space, natural logarithms of length, time and mass ratios are considered as vectors. The logarithm of ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius by the electron Compton wavelength, and for mass ratio that of $M^{\prime}$ by the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation between $e$, $a$ and involved logarithms reach precision $10^{-7}$.} 
 \end{figure}
 
