--- a/main.tex
+++ b/main.tex
@@ -108,11 +108,11 @@ Hydrogen molecule, where
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
-$$a_{G} = $\hbar c/Gm_{p}m_{H}$$
+$$a_{G} = \hbar c/Gm_{p}m_{H}$$
 So, \textit{the speed c is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $$R \approx$ 13,812 Gly $$, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
-directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by 9\%,
+directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$,
 value.
 
 Consider the wavelength $$\lambdabar_{M} = \hbar /Mc = 4 \cdot 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
