--- a/main.tex
+++ b/main.tex
@@ -340,7 +340,7 @@ $$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$ (Section 4):
 
-$$R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$$
+$$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
 
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
@@ -348,7 +348,7 @@ with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
+deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section 4.5).
 
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
