--- a/main.tex
+++ b/main.tex
@@ -339,9 +339,7 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465  Gly$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$ (Section 4):
-
 $$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
-
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$:
@@ -492,7 +490,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \subsubsection{The Tifft, Arp and the Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
-speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
 
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
@@ -500,27 +498,23 @@ Universe mass: this is confirmed by the following confirmation of the invariance
 density $\rho_{c}$.
 
 Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$. It corresponds to
-the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
+the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \subsection{The Logic of Prospective Dimensional Analysis}
 
 Physical relations use principally physical quantities of the type $Q = M^{x} L^{y} T^{t}$, where
 the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, and where the exponents are
 rational numbers. However, the addition of measures of different categories has no significance.
-This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So there
-must be a hidden common nature for the three categories, mass, length and time. This sustains the
+This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So, \textit{there
+must be a hidden common nature for the three categories, mass, length and time}. This sustains the
 above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
 Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. Indeed, with $t =
 R/c$, summing the square of $ln(M^{\prime}/m_{e} )$, where $M^{\prime} = R^{\prime} c^{2} /2G$ is the critical mass in the above
-holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
-40 ppm:
+holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to 40 ppm:
 \begin{equation}
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
-\end{equation}
-more precisely, to $10^{-8}$ , corresponding to $10^{-7}$ precision on the above G value:
-
-which traduces in function of $P = m_P/m_e$ by $ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
-
+\end{equation} which traduces in function of $P = m_P/m_e$ by $ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
+more precisely, to $10^{-8}$ , corresponding to $10^{-7}$ precision on the above $G$ value:
 \begin{equation}
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
 \end{equation}
@@ -579,12 +573,12 @@ pendulus shows it directly, realizing the Cosmic Microwave Background frame, ide
 Grandcosmos frame, as seen above.
 
 Introducing the Fermi constant $G_{F}$, the associated $c$-free length is very particular, to $1.7\%$:
-$$l\{\hbar,\rho_{c},G_{F}\} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
+$$l\{\hbar,\rho_{c},G_{F}\} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 \times 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory $c$-free times are close to each over $(0.7\%)$:
 \begin{equation}
 T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
 \end{equation}
-$$T\prime\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
+$$T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Super-cycle, which matches with Topological Axis at n = 30;
 the holic dimension (see below), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
