--- a/main.tex
+++ b/main.tex
@@ -524,8 +524,7 @@ This is a dramatic geometrical confirmation for the visible Universe – Grandco
 
 \begin{figure}[h]
 \centering
-%\includegraphics[width=8cm,height=6.5cm]{./figures/triaxis.png}
-\includegraphics[width=8.5cm,height=9.5cm]{./figures/triaxis.png}
+\includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
 \caption{Geo dimensional Universe-Grandcosmos couple. In a 3D Super-space, natural logarithms of length, time and mass ratios are considered as vectors. The logarithm of ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius by the electron Compton wavelength, and for mass ratio that of $M^{\prime}$ by the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation between $e$, $a$ and involved logarithms reach precision $10^{-7}$.} 
 \end{figure}
 
@@ -1186,9 +1185,8 @@ Nature 278, 605-612 (1979). % Here is referred book
 
 \bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge), 1946.
 
-\bibitem{2} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
-2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
-Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7-23. % Here is referred book
+\bibitem{3}  Sanchez F.M. \textit{Coherent Cosmology} Vixra.org,1601.0011. Sanchez F.M., Kotov V. and Bizouard C., textit{Towards Coherent Cosmolog}, Galilean Electrodynamics, special issue, winter 2013, pp 63-80.
+Sanchez F.M. \textit{A Coherent Resonant  Ccosmology Approach and its Im^plications in Microphysics and Biology}, Progress in Theoretical Chemistry and Physics 30, pp. 375-407.Springer (2017) DOI 10.1007/978-3-319-50255-7-2. % Here is referred book
 
 \bibitem{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
 (2016). % Here is referred book
