--- a/main.tex
+++ b/main.tex
@@ -1185,8 +1185,8 @@ Nature 278, 605-612 (1979). % Here is referred book
 
 \bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge), 1946.
 
-\bibitem{3}  Sanchez F.M. \textit{Coherent Cosmology} Vixra.org,1601.0011. Sanchez F.M., Kotov V. and Bizouard C., textit{Towards Coherent Cosmology}, Galilean Electrodynamics, special issue, winter 2013, pp 63-80.
-Sanchez F.M. \textit{A Coherent Resonant Cosmology Approach and its Implications in Microphysics and Biology}, Progress in Theoretical Chemistry and Physics 30, pp. 375-407.Springer (2017). DOI 10.1007/978-3-319-50255-7-2. % Here is referred book
+\bibitem{3}  Sanchez F.M. \textit{Coherent Cosmology} Vixra.org,1601.0011. Sanchez F.M., Kotov V. and Bizouard C., \textit{Towards Coherent Cosmology}, Galilean Electrodynamics, special issue, winter 2013, pp 63-80.
+Sanchez F.M. \textit {A Coherent Resonant Cosmology Approach and its Implications in Microphysics and Biology}, Progress in Theoretical Chemistry and Physics 30, pp. 375-407.Springer (2017). DOI 10.1007/978-3-319-50255-7-2. % Here is referred book
 
 \bibitem{3} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
 (2016). % Here is referred book
