--- a/main.tex
+++ b/main.tex
@@ -564,7 +564,9 @@ t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}.
 \end{equation}
 This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ without any ambiguity: this is the 
 radius of the sphere containing critical mass. This means each atom is the center of an equivalent black hole,
-justifying the above application of the Bekenstein-Hawking entropy. Opponents would say that the
+justifying the above application of the Bekenstein-Hawking entropy. 
+
+Opponents would say that the
 center of a black hole presents a singularity: that is indeed the case in the above flickering Space-
 Mass-Time hypothesis. Other will argue that the flying galaxies cannot reach the celerity $c$ at
 horizon, but it must be recognized that Relativity is a local theory, so do not apply to cosmology at large.
@@ -578,17 +580,17 @@ Now, the following mandatory $c$-free times are close to each over $(0.7\%)$:
 \begin{equation}
 T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
 \end{equation}
-$$T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
+\begin{equation}
+T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s
+\end{equation}
 This would be the periodic time of a Super-cycle, which matches with Topological Axis at n = 30;
 the holic dimension (see below), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
 where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_0$ chronon :
-
 \begin{equation}
 T/t_0 \approx (3/e\sqrt{2})O_M^3
 \end{equation}
-
 The simplest interpretation follows: this is the number of quantum events in a Super-cycle of period $T$, in a perfectly deteministic Cosmos. 
 
 The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17]. see below the dramatic properties of $O_M^3$.
