--- a/main.tex
+++ b/main.tex
@@ -533,8 +533,9 @@ association of three of them must give characteristic values of $M$, $L$, $T$. S
 Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants
 which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is
 largely used in Fluid Mechanics, were the equations are intractable, but is largely ignored in other
-domains, because there is no real mathematical foundation, apart the above essential remarks, except for the triplet $c, G, \hbar$ which define the above Planck units. But
-in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
+domains, because there is no real mathematical foundation, apart the above essential remarks, except for the triplet $c, G, \hbar$ which define the above Planck units. 
+
+But, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis. 
 
 The elimination of $c$ in the above $R$ formula means that the simplest basic dimensional
@@ -544,6 +545,7 @@ which is far two small a speed. This has not been observed during one century, s
 believed to be the single mandatory foundation of space-time. The warning of Poincare, the true
 discoverer of Relativity: `use 4D space but do not confound Space and Time` has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
+
 In his three first minutes of cosmology, the first author obtained the length:
 \begin{equation}
 l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
