--- a/main.tex
+++ b/main.tex
@@ -508,12 +508,18 @@ rational numbers. However, the addition of measures of different categories has 
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So, \textit{there
 must be a hidden common nature for the three categories, mass, length and time}. This sustains the
 above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
-Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. Indeed, with $t =
+Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. 
+
+Indeed, with $t =
 R/c$, summing the square of $ln(M^{\prime}/m_{e} )$, where $M^{\prime} = R^{\prime} c^{2} /2G$ is the critical mass in the above
 holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to 40 ppm:
 \begin{equation}
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
-\end{equation} which traduces in function of $P = m_P/m_e$ by $ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
+\end{equation} which traduces in function of $P = m_P/m_e$ by:
+\begin{equation}
+ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)
+\end{equation}
+Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
 more precisely, to $10^{-8}$ , corresponding to $10^{-7}$ precision on the above $G$ value:
 \begin{equation}
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
