--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,19 @@
 }\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
-F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult\\
+F. M. Sanchez$^1\!$, \ V. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
+
+{\footnotesize  $^1$Retired Pr. Universite Paris 9, Orsay, France.\rule{0pt}{12pt}
+E-mail: hol137-at-yahoo-dot-com\\
+$^2$Astronomer CrAO, Nauchny, Crimea.
+$^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
+$^4$Retired Pr. at Universite Dijon, France.
+$^5$Retired Pr. at Ecole centrale, France.
+$^6$Astronomer at OBSPM, France.
+$^7$Math Instructor at Ecole d'Architecture Paris Villemin/Paris La Seine, France.
+$^8$Computer Science Engineer at OBSPM, France.
+$^9$Retired Maitre de Conference at Ecole d'Architecture Paris Villemin/Paris La Seine, France.
+
 \par
 \medskip
 {\small\parbox{11cm}{%
