--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ $^7$Math Instructor at Ecole d'Architecture Paris Villemin/Paris La Seine, Franc
 $^8$Computer Science Engineer at OBSPM, France.
 $^9$Retired Maitre de Conference at Ecole d'Architecture Paris Villemin/Paris La Seine, France.
 
-\par
+}\par
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
