--- a/main.tex
+++ b/main.tex
@@ -45,14 +45,14 @@ F. M. Sanchez$^1\!$, \ V. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. 
 
 {\footnotesize  $^1$Retired Pr. Universite Paris 9, Orsay, France.\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
-$^2$Astronomer CrAO, Nauchny, Crimea.
+$^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
 $^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
 $^4$Retired Pr. at Universite Dijon, France.
-$^5$Retired Pr. at Ecole centrale, France.
-$^6$Astronomer at OBSPM, France.
-$^7$Math Instructor at Ecole d'Architecture Paris Villemin/Paris La Seine, France.
-$^8$Computer Science Engineer at OBSPM, France.
-$^9$Retired Maitre de Conference at Ecole d'Architecture Paris Villemin/Paris La Seine, France.
+$^5$Retired Pr. at Ecole centrale, Paris, France.
+$^6$Astronomer at OBSPM, Paris, France.
+$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
+$^8$Computer Science Engineer at OBSPM, Paris, France.
+$^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 
 }\par
 \medskip
